styles/main.css
:root {
    --content-max-width: 850px;
    --size-multiplier: 1;
    --gutter: 40px;
}

/* Index section headers, blog title headers */

h1 {
    font-weight: 600;
    margin-top: 0.4em;
    font-size: calc(2em * var(--size-multiplier));
}

/* Index card headers */

h2 {
    font-size: calc(1.18em * var(--size-multiplier));
    margin-top: 0.2em;
    margin-bottom: 0.2em;
    font-weight: 700;
}

/* Blog section headers */

h3 {
    font-size: calc(1.35em * var(--size-multiplier));
    margin-top: 1.6em;
    margin-bottom: 0.2em;
    font-weight: 700;
}

/* Blog code headers */

h4 {
    margin: 1.5em 0em 0em 0em;
    font-size: calc(1em * var(--size-multiplier));
}

p {
    font-weight: 400;
    font-size: calc(1em * var(--size-multiplier));
    margin: calc(1em * var(--size-multiplier)) 0em;
}

code {
    font-size: calc(1em * var(--size-multiplier));
}

li {
    font-size: calc(1em * var(--size-multiplier));
}

hr {
    height: 0.5px;
    border: none;
    color: transparent;
    background-color: black;
}

body {
    margin: 0;
}

#hero-title {
    font-family: 'Kaushan Script', cursive;
    fill: white;
}

#hero-subtitle {
    font-weight: 600;
    fill: gold;
    text-transform: lowercase;
}

#hero-subtitle-fill {
    background-color: white;
    border-radius: 2.5vw;
}

svg {
    width: 100%;
}

html {
    background: rgb(30, 20, 50) url("../images/stars.jpg") no-repeat center center;
    background-attachment: fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    font-family: 'Open Sans', sans-serif;
}

.hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    width: 90vw;
    max-width: var(--content-max-width);
}

.hero-wrapper {
    height: 88vh;
    min-height: 300px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

.grid-wrapper {
    display: flex;
    justify-content: center;
    background: black;
    color: white;
}

.app {
    padding: var(--gutter) 0px;
    display: grid;
    grid-gap: 0 0;
    grid-template-columns: var(--gutter) 1fr var(--gutter);
    align-content: start;
    max-width: var(--content-max-width);
}

.app>* {
    grid-column: 2 / -2;
}

.app>.full {
    grid-column: 1 / -1;
}

.menu-grid {
    display: grid;
    grid-gap: calc(var(--gutter) / 2);
    grid-template-rows: minmax(150px, 1fr);
    grid-auto-flow: column;
    grid-auto-columns: calc(50% - var(--gutter) * 2);
    overflow-x: scroll;
    scroll-snap-type: x mandatory;
    scroll-padding-left: var(--gutter);
    scroll-padding-right: 0px;
    padding-bottom: calc(.75 * var(--gutter));
    margin-bottom: calc(-.25 * var(--gutter));
    mask-image: linear-gradient(to right, transparent, black 3%, black 97%, transparent 100%);
    -webkit-mask-image: linear-gradient( to right, transparent, black 3%, black 97%, transparent 100%);
}

.menu-grid:after {
    content: '';
    width: calc(var(--gutter) / 2);
    scroll-snap-align: none;
    margin-left: var(--gutter);
}

#menu-card-text {
    padding-right: 5px;
    margin-top: 6px;
    margin-bottom: 0px;
}

.menu-card {
    border-radius: 12px;
    width: calc(100% - 6px - 16px - 16px);
    scroll-snap-align: start;
    box-shadow: 6px 2px 0px 2px gold, 2px 3px 0px 2px gold, 6px 3px 0px 2px gold;
    padding: calc(16px * var(--size-multiplier));
    background-color: white;
    color: black;
    margin-left: var(--gutter);
    cursor: pointer;
}

#project-menu {
    grid-auto-columns: calc(33.333% - var(--gutter) * 2);
}

.project-card {
    border-radius: 12px;
    width: calc(100% - 6px);
    scroll-snap-align: start;
    box-shadow: 6px 2px 0px 2px gold, 2px 3px 0px 2px gold, 6px 3px 0px 2px gold;
    background-color: white;
    color: black;
    margin-left: var(--gutter);
    cursor: pointer;
    transition-duration: 0.4s;
}


img.project-card:hover {
    filter: blur(3px);
    -webkit-filter: blur(3px);
}

.menu-card:hover {
    background-color: rgb(255, 235, 128);
}

.about-me-wrapper {
    backdrop-filter: blur(3px);
    -webkit-backdrop-filter: blur(3px);
    display: flex;
    justify-content: center;
    color: white;
}

.about-me-grid {
    display: grid;
    grid-gap: var(--gutter);
    grid-template-columns: auto 33%;
    max-width: var(--content-max-width);
    margin-bottom: calc(24px * var(--size-multiplier));
}

#portrait-louis {
    border-radius: 50%;
    object-fit: cover;
    width: 100%;
    margin-top: auto;
    margin-bottom: auto;
}

.blog-wrapper {
    display: flex;
    justify-content: center;
}

.blog-content {
    background-color: white;
    padding: 20px 40px 40px 40px;
    border-radius: 20px;
    margin: 20px;
}

.blog-grid {
    display: grid;
    margin: 20px 0px;
    grid-template-columns: auto auto;
    max-width: var(--content-max-width);
}

#blog-number {
    font-family: 'Kaushan Script', cursive;
    font-weight: 600;
    color: gold;
    font-size: 6.5vw;
    margin: 0;
}

#blog-number-container {
    width: 8vw;
    padding: 20px 2vw 0px 0px;
}

#blog-number-fixer {
    position: fixed;
    padding-left: 10px;
}

pre {
    white-space: pre-wrap;
    background-color: ghostwhite;
    margin-top: 0;
    border-left: 3px solid purple;
}

.quote {
    background-color: ghostwhite;
    margin-bottom: 1em;
    padding: 1px 0px 1px 32px;
    border-left: 3px solid purple;
}

.purple-text-example {
    color: purple;
}

.purple-text-example-2 {
    color: purple;
}

h1.purple-text-example-2 {
    text-transform: uppercase;
}

span.purple-text-example-2 {
    font-family: 'Kaushan Script', cursive;
}

#gold-text-example {
    color: white;
    border-radius: 5px;
    padding: 3px;
    background-color: gold;
}

.blog-link {
    color: white;
    font-size: 1vw;
}

.link-grid {
    display: grid;
    margin-top: 10px;
    grid-gap: 1vw;
    grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
    width: 8.5vw;
    max-width: var(--content-max-width);
}

.link-icon {
    width: 100%;
    padding: 5px;
}

.link-icon:hover {
    border-radius: 10px;
    background-color: gold;
    padding: 5px;
}

.signiture {
    font-family: 'Kaushan Script', cursive;
    padding-left: 10px;
    font-size: 1.5em;
}

/* TABLETS (between 480px and 1024px) */
@media screen and (max-width: 1024px) {
    :root {
        --content-max-width: 100%;
    }
    .hero-wrapper {
        height: 66vh;
    }
    .menu-grid {
        grid-auto-columns: calc(50% - var(--gutter) * 2);
        mask-image: none;
        -webkit-mask-image: none;
    }
    #project-menu {
        grid-auto-columns: calc(50% - var(--gutter) * 2);
    }
    .blog-grid {
        grid-template-columns: 100%;
    }
    .blog-content {
        padding: 40px;
        margin: 40px 80px;
    }
    #blog-number-container {
        width: 100%;
        padding: 20px 0px 0px 0px;
    }
    #blog-number-fixer {
        position: static;
        display: flex;
        padding-left: 80px;
    }
    #blog-number {
        font-size: calc(60px * var(--size-multiplier));
    }
    .link-grid {
        padding-top: 5px;
        padding-left: 5px;
        width: calc(155px * var(--size-multiplier));
    }
    #portrait-louis {
        width: 66.66%;
        margin-left: auto;
        margin-right: auto;
    }
}

/* MOBILE DEVICES (less than 480px) */
@media screen and (max-width: 480px) {
    html {
        background-attachment: scroll;
    }
    .about-me-wrapper {
        backdrop-filter: blur(6px);
        -webkit-backdrop-filter: blur(6px);
    }
    .about-me-grid {
        grid-template-columns: 100%;
    }
    .menu-grid {
        grid-auto-columns: calc(100% - var(--gutter) * 2);
    }
    #project-menu {
        grid-auto-columns: calc(100% - var(--gutter) * 2);
    }
    .blog-content {
        padding: 20px;
        margin: 20px;
    }
    #blog-number-fixer {
        padding-left: 20px;
    }
}

